@@ -185,6 +185,16 @@ DBUser=root
 # Default:
 # StartHTTPPollers=1
 
+### Option: StartTimers
+#	Number of pre-forked instances of timers.
+#	Timers evaluates time-related trigger functions and maintenances.
+#	Only one timer process will process the maintenance periods.
+#
+# Mandatory: no
+# Range: 1-1000
+# Default:
+# StartTimers=1
+
 ### Option: JavaGateway
 #	IP address (or hostname) of Zabbix Java gateway.
 #	Only required if Java pollers are started.
